# python_2b

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 478c43b65a69_subject_added_relation_between_.py  df1590f016ea_initial_migration.py
src/python_2b/: crud.py  relation.py
